--- a/download.html
+++ b/download.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
-  <title>Pyspread - Download</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="Author" content="Martin Manns">
-  <meta name="description"
- content="Pyspread is a cross-platform Python spreadsheet.">
-  <meta name="keywords"
- content="pyspread, spreadsheet, python, python spreadsheet, numpy, wxpython, csv, data mining">
-  <style type="text/css">
+  <head>
+    <title>Pyspread - Download</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="Author" content="Martin Manns">
+    <meta name="description" content="Pyspread is a cross-platform
+      Python spreadsheet.">
+    <meta name="keywords" content="pyspread, spreadsheet, python, python
+      spreadsheet, numpy, wxpython, csv, data mining">
+    <style type="text/css">
 <!--
 body
 {
@@ -64,8 +64,8 @@ color:#000000;
 }
 
 //--></style><!-- SF Logo -->
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-  <style type="text/css">
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <style type="text/css">
 th {
   font-size: large;
   font-weight: bold;
@@ -100,123 +100,136 @@ h3 {
 }
 
   </style>
-</head>
-<body>
-<div style="float: right;">
-<a href="http://sourceforge.net/projects/pyspread"><br>
-</a></div>
-<!-- Title -->
-<div style="float: left; width: 80px; height: 80px;"><img
- src="images/pyspread.png"
- style="margin-left: 15px; margin-right: 30px; margin-top: 10px;"
- alt="Logo" height="57" width="44"></div>
-<div style="width: 400px; height: 80px;">
-<h1 id="title">pyspread</h1>
-<h3>Python power for your tables</h3>
-</div>
-<!-- Menu -->
-<div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
-|&nbsp; <a style="text-decoration: overline; color: black;"
- class="menu" href="download.html">download</a>&nbsp;
-|&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
-|&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
-|&nbsp;&nbsp;
-<a class="menu" href="https://github.com/manns/pyspread/issues"
- target="_blank">bugs</a><a class="menu"
- href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
-</div>
-<p>
-</p>
-<table
- style="text-align: left; width: 100%; margin-left: auto; margin-right: auto;"
- cellpadding="15" cellspacing="0" border="0">
-  <tbody>
-    <tr>
-      <th
- style="vertical-align: top; background-color: white; width: 102px;">latest<br>
-      </th>
-      <td style="vertical-align: top;"><a
- href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
-0.2.0</a><br>
-      </td>
-    </tr>
-    <tr>
-      <th style="vertical-align: top; width: 102px;">previous</th>
-      <td style="vertical-align: top;"><a
- href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
-0.1.2</a><br>
-      </td>
-    </tr>
-    <tr>
-      <th style="vertical-align: top; width: 102px;">Other sites<br>
-      </th>
-      <td style="vertical-align: top;"><a
- href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">Python
-package
-index</a><br>
-      </td>
-    </tr>
-    <tr>
-      <th style="vertical-align: top; width: 102px;">installation<br>
-      </th>
-      <td style="vertical-align: top;"><a
- href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search"></a>
-      <ol>
-        <li> Download the pyspread tarball and extract at a convenient
-place <br>
-          <tt><br>
-tar xzvf <span style="font-family: Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
-          <br>
-          </span></tt></li>
-        <li> In case you do not have it already get and install Python,
-wxpython and numpy<br>
-If you want the examples to work, install gmpy, R and rpy.<br>
-          <br>
-        </li>
-        <li><span style="font-weight: bold;"> Really do check the
-version requirements</span> that are mentioned on the main page.<br>
-          <br>
-        </li>
-        <li>Get install privileges (e.g. become root)<br>
-          <br>
-        </li>
-        <li> Change into the directory and type <br>
-          <tt><br>
-python setup.py install</tt> <br>
-          <br>
-        </li>
-        <li> Windows: Replace “python” with your Python interpreter
-(absolute path) <br>
-          <br>
-        </li>
-        <li> Become normal user again <br>
-          <br>
-        </li>
-        <li> Start pyspread by typing <br>
-          <br>
-          <tt>pyspread</tt> <br>
-          <br>
-        </li>
-        <li> Enjoy </li>
-      </ol>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<p>
-</p>
-<p><span style="font-style: italic;"><small>C<font size="-1">opyright
-2008-2011 Martin
-Manns</font></small><font size="-1"><br>
-Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
- style="font-style: italic;">
-</font>
-</span><font size="-1"><span style="font-style: italic;">Last changed:
-26.
-December 2011
-</span></font></p>
-<p><span style="font-style: italic;"><small></small></span></p>
-<p> <a href="http://validator.w3.org/check?uri=referer"><br>
-</a> </p>
-</body>
+  </head>
+  <body>
+    <div style="float: right;">
+      <a href="http://sourceforge.net/projects/pyspread"><br>
+      </a></div>
+    <!-- Title -->
+    <div style="float: left; width: 80px; height: 80px;"><img
+        src="images/pyspread.png" style="margin-left: 15px;
+        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
+        width="44"></div>
+    <div style="width: 400px; height: 80px;">
+      <h1 id="title">pyspread</h1>
+      <h3>Python power for your tables</h3>
+    </div>
+    <!-- Menu -->
+    <div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
+      |&nbsp; <a style="text-decoration: overline; color: black;"
+        class="menu" href="download.html">download</a>&nbsp;
+      |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
+      |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
+      |&nbsp;&nbsp;
+      <a class="menu" href="https://github.com/manns/pyspread/issues"
+        target="_blank">bugs</a><a class="menu"
+        href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
+    </div>
+    <p>
+    </p>
+    <table style="text-align: left; width: 100%; margin-left: auto;
+      margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
+      <tbody>
+        <tr>
+          <th style="vertical-align: top; background-color: white;
+            width: 102px;">latest<br>
+          </th>
+          <td style="vertical-align: top;"><a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
+              0.2.1</a><br>
+          </td>
+        </tr>
+        <tr>
+          <th style="vertical-align: top; width: 102px;">previous</th>
+          <td style="vertical-align: top;"><a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
+              0.2.0</a><br>
+            <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
+              0.1.2</a><br>
+          </td>
+        </tr>
+        <tr>
+          <th style="vertical-align: top; width: 102px;">Other sites<br>
+          </th>
+          <td style="vertical-align: top;"><a
+href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">Python
+              package
+              index</a><br>
+          </td>
+        </tr>
+        <tr>
+          <th style="vertical-align: top; width: 102px;">installation<br>
+          </th>
+          <td style="vertical-align: top;"><a
+href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search"></a>
+            <ol>
+              <li> Download the pyspread tarball and extract at a
+                convenient
+                place <br>
+                <tt><br>
+                  tar xzvf <span style="font-family:
+                    Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
+                    <br>
+                  </span></tt></li>
+              <li> In case you do not have it already get and install
+                Python,
+                wxpython and numpy<br>
+                If you want the examples to work, install gmpy, R and
+                rpy.<br>
+                <br>
+              </li>
+              <li><span style="font-weight: bold;"> Really do check the
+                  version requirements</span> that are mentioned on the
+                main page.<br>
+                <br>
+              </li>
+              <li>Get install privileges (e.g. become root)<br>
+                <br>
+              </li>
+              <li> Change into the directory and type <br>
+                <tt><br>
+                  python setup.py install</tt> <br>
+                <br>
+              </li>
+              <li> Windows: Replace “python” with your Python
+                interpreter
+                (absolute path) <br>
+                <br>
+              </li>
+              <li> Become normal user again <br>
+                <br>
+              </li>
+              <li>If upgrading to version 0.2.1 remove the config file<br>
+                <br>
+                <tt>rm ~/.pyspreadrc</tt><br>
+                <br>
+              </li>
+              <li> Start pyspread by typing <br>
+                <br>
+                <tt>pyspread</tt> <br>
+                <br>
+              </li>
+              <li> Enjoy </li>
+            </ol>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <p>
+    </p>
+    <p><span style="font-style: italic;"><small>C<font size="-1">opyright
+2008-2012
+            Martin
+            Manns</font></small><font size="-1"><br>
+          Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
+            style="font-style: italic;">
+        </font>
+      </span><font size="-1"><span style="font-style: italic;">Last
+          changed: 11. March 2012
+        </span></font></p>
+    <p><span style="font-style: italic;"><small></small></span></p>
+    <p> <a href="http://validator.w3.org/check?uri=referer"><br>
+      </a> </p>
+  </body>
 </html>
