Webpage changes for version 0.2.2

--- a/download.html
+++ b/download.html
@@ -102,8 +102,8 @@ h3 {
   </style>
   </head>
   <body>
-    <div style="float: right;">
-      <a href="http://sourceforge.net/projects/pyspread"><br>
+    <div style="float: right;"> <a
+        href="http://sourceforge.net/projects/pyspread"><br>
       </a></div>
     <!-- Title -->
     <div style="float: left; width: 80px; height: 80px;"><img
@@ -120,13 +120,12 @@ h3 {
         class="menu" href="download.html">download</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
-      |&nbsp;&nbsp;
-      <a class="menu" href="https://github.com/manns/pyspread/issues"
-        target="_blank">bugs</a><a class="menu"
-        href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
-    </div>
-    <p>
-    </p>
+
+      |&nbsp;&nbsp; <a class="menu"
+        href="https://github.com/manns/pyspread/issues" target="_blank">bugs</a><a
+        class="menu" href="http://pyspread.wiki.sourceforge.net/"
+        target="_blank"></a> </div>
+    <p> </p>
     <table style="text-align: left; width: 100%; margin-left: auto;
       margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
       <tbody>
@@ -135,18 +134,25 @@ h3 {
             width: 102px;">latest<br>
           </th>
           <td style="vertical-align: top;"><a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
-              0.2.1</a><br>
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
+
+              0.2.2</a><br>
           </td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">previous</th>
           <td style="vertical-align: top;"><a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
+
+              0.2.1</a><br>
+            <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
+
               0.2.0</a><br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
-              0.1.2</a><br>
+
+              0.1.2</a> (latest Windows compatible version)<br>
           </td>
         </tr>
         <tr>
@@ -154,8 +160,8 @@ h3 {
           </th>
           <td style="vertical-align: top;"><a
 href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">Python
-              package
-              index</a><br>
+
+              package index</a><br>
           </td>
         </tr>
         <tr>
@@ -165,16 +171,14 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
 href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search"></a>
             <ol>
               <li> Download the pyspread tarball and extract at a
-                convenient
-                place <br>
+                convenient place <br>
                 <tt><br>
                   tar xzvf <span style="font-family:
                     Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
                     <br>
                   </span></tt></li>
               <li> In case you do not have it already get and install
-                Python,
-                wxpython and numpy<br>
+                Python, wxpython and numpy<br>
                 If you want the examples to work, install gmpy, R and
                 rpy.<br>
                 <br>
@@ -193,14 +197,13 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 <br>
               </li>
               <li> Windows: Replace “python” with your Python
-                interpreter
-                (absolute path) <br>
+                interpreter (absolute path) <br>
                 <br>
               </li>
               <li> Become normal user again <br>
                 <br>
               </li>
-              <li>If upgrading to version 0.2.1 remove the config file<br>
+              <li>If upgrading to version 0.2.2 remove the config file<br>
                 <br>
                 <tt>rm ~/.pyspreadrc</tt><br>
                 <br>
@@ -216,18 +219,14 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
         </tr>
       </tbody>
     </table>
-    <p>
-    </p>
+    <p> </p>
     <p><span style="font-style: italic;"><small>C<font size="-1">opyright
-2008-2012
-            Martin
-            Manns</font></small><font size="-1"><br>
+
+            Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
-        </font>
-      </span><font size="-1"><span style="font-style: italic;">Last
-          changed: 11. March 2012
-        </span></font></p>
+        </font> </span><font size="-1"><span style="font-style:
+          italic;">Last changed: 11. April 2012 </span></font></p>
     <p><span style="font-style: italic;"><small></small></span></p>
     <p> <a href="http://validator.w3.org/check?uri=referer"><br>
       </a> </p>
