--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ h3 {
   </style>
   </head>
   <body>
-    <div style="float: right;">
-      <a href="http://sourceforge.net/projects/pyspread"><br>
+    <div style="float: right;"> <a
+        href="http://sourceforge.net/projects/pyspread"><br>
       </a></div>
     <!-- Title -->
     <div style="float: left; width: 80px; height: 80px;"><img
@@ -117,16 +117,14 @@ h3 {
     <!-- Menu -->
     <div id="menu"><a href="index.html" class="menu" style="font-weight:
         bold; color: black; text-decoration: overline;">home</a>&nbsp;
-      |&nbsp;
-      <a class="menu" href="download.html">download</a>&nbsp;
+      |&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
-      |&nbsp;&nbsp;
-      <a class="menu" href="https://github.com/manns/pyspread/issues"
-        target="blank">bugs</a>
+
+      |&nbsp;&nbsp; <a class="menu"
+        href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
     </div>
-    <p>
-    </p>
+    <p> </p>
     <table style="text-align: left; width: 100%; margin-left: auto;
       margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
       <tbody>
@@ -142,18 +140,13 @@ h3 {
             The goal of pyspread is to be the most pythonic spreadsheet.<br>
             <br>
             Pyspread expects Python expressions in its grid cells, which
-            makes a
-            spreadsheet specific language obsolete. Each cell returns a
-            Python
-            object that can
-            be accessed from other cells. These objects can represent
-            anything
-            including lists or matrices.<br>
+            makes a spreadsheet specific language obsolete. Each cell
+            returns a Python object that can be accessed from other
+            cells. These objects can represent anything including lists
+            or matrices.<br>
             <br>
-            Pyspread is free
-            software. It is released under the <a
-              href="http://www.gnu.org/copyleft/gpl.html">GPL
-              v3</a>.<br>
+            Pyspread is free software. It is released under the <a
+              href="http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.<br>
           </td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -169,8 +162,7 @@ h3 {
           </th>
           <td style="vertical-align: top;">
             <ul style="text-align: left;">
-              <li> Three
-                dimensional grid with up to 80 million rows<br>
+              <li> Three dimensional grid with up to 80 million rows<br>
               </li>
               <li>Macros</li>
               <li>CSV import and export</li>
@@ -189,6 +181,7 @@ h3 {
                     href="http://rpy.sourceforge.net/">RPy</a></li>
                 <li>Much more via <span style="font-style: italic;">&lt;your
 favourite
+
                     module&gt;</span></li>
               </ul>
             </ul>
@@ -206,12 +199,9 @@ favourite
         <tr>
           <th style="vertical-align: top;">news<br>
           </th>
-          <td style="vertical-align: top; text-align: left;">March 2012:
-            Pyspread 0.2.1 is out. Get it from <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">here</a>.<br>
-            December 2011:
-            Pyspread 0.2.0 is out. Get it from <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">here</a>.<br>
+          <td style="vertical-align: top; text-align: left;">April 2012:
+            Pyspread 0.2.2 is out. Get it from <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">here</a>.<br>
             December 2011: The main site is moving from Sourceforge to
             github.<br>
           </td>
@@ -224,23 +214,14 @@ favourite
           <th style="vertical-align: top; width: 102px;">Requirements<br>
           </th>
           <td style="vertical-align: top;">Pyspread is designed for
-            Linux
-            and other GTK platforms.<br>
+            Linux and other GTK platforms.<br>
             <br>
             Due to time restrictions, Windows™ support has been
-            discontinued
-            starting with
-            version 0.2.0. If you run Windows, get version 0.1.2 from <a
+            discontinued starting with version 0.2.0. If you run
+            Windows, get version 0.1.2 from <a
 href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">here</a>.
-            If
-            you
-            would
-            like
-            to
-            maintain
-            a
-            Windows version
-            please contact me.<br>
+            If you would like to maintain a Windows version please
+            contact me.<br>
             <br>
             <span style="text-decoration: underline;">Dependencies </span><br>
             <ul>
@@ -253,9 +234,7 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
                 &gt;=0.8.1</li>
             </ul>
             <span style="text-decoration: underline;">Highly recommended
-              for
-              full
-              functionality of the example files </span><br>
+              for full functionality of the example files </span><br>
             <ul>
               <li><a href="http://code.google.com/p/gmpy/">gmpy</a>
                 &gt;=1.1.0</li>
@@ -275,19 +254,17 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
           <th style="vertical-align: top;">contact<br>
           </th>
           <td style="vertical-align: top;">For user questions or
-            feedback
-            please post to the pyspread-users mailing list by sending an
-            e-mail to <a href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
-            You
-            can <a href="https://mail.gna.org/listinfo/pyspread-users/">here</a>
+            feedback please post to the pyspread-users mailing list by
+            sending an e-mail to <a
+              href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
+            You can <a
+              href="https://mail.gna.org/listinfo/pyspread-users/">here</a>
             subscribe to the list.<br>
             <br>
             For contributions, patches, development discussions and
-            ideas please
-            post to the pyspread-dev mailing list by sending an e-mail
-            to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
-            You can subscribe
-            to the list <a
+            ideas please post to the pyspread-dev mailing list by
+            sending an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
+            You can subscribe to the list <a
               href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>.</td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -296,17 +273,15 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
         </tr>
       </tbody>
     </table>
-    <p>
-    </p>
+    <p> </p>
     <p><span style="font-style: italic;"><small>C<font size="-1">opyright
-2008-2011
-            Martin
-            Manns</font></small><font size="-1"><br>
+
+            Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
-          11. March 2012
-        </span></font></p>
+
+          11. April 2012 </span></font></p>
   </body>
 </html>
