--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ h3 {
       |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
 
 
+
       |&nbsp;&nbsp; <a class="menu"
         href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
     </div>
@@ -184,6 +185,7 @@ h3 {
 favourite
 
 
+
                     module&gt;</span></li>
               </ul>
             </ul>
@@ -202,10 +204,16 @@ favourite
           <th style="vertical-align: top;">news<br>
           </th>
           <td style="vertical-align: top; text-align: left;">April 2012:
-            Pyspread 0.2.2 is out. Get it from <a
+            Pyspread version 0.2.2 has been <a
+              href="http://ftp-master.debian.org/new/pyspread_0.2.2-1.html">uploaded
+              to Debian unstable</a> by Andreas Noteng. Many thanks to
+            him for packaging. After clearing the NEW queue, it will be
+            installable in Debian unstable using "apt-get install
+            pyspread". In Ubuntu, it will be available in release 12.10
+            Quantal Quetzal.<br>
+            <br>
+            April 2012: Pyspread 0.2.2 is out. Get it from <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">here</a>.<br>
-            December 2011: The main site is moving from Sourceforge to
-            github.<br>
           </td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -266,8 +274,9 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
             For contributions, patches, development discussions and
             ideas please post to the pyspread-dev mailing list by
             sending an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
-            You can subscribe to the list <a
-              href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>.</td>
+            You can <a
+              href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
+            subscribe to the list.</td>
           <td style="vertical-align: top;"><br>
           </td>
           <td><br>
@@ -279,13 +288,12 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
     <p><span style="font-style: italic;"><small>C<font size="-1">opyright
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
-
-
-          19. April 2012 </span></font></p>
+          27. April 2012 </span></font></p>
   </body>
 </html>
