Code structure info added to contribution web page

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ h3 {
 
 
 
+
       |&nbsp;&nbsp; <a class="menu"
         href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
     </div>
@@ -182,11 +183,7 @@ h3 {
                 <li>Advanced statistics and plotting via <a
                     href="http://rpy.sourceforge.net/">RPy</a></li>
                 <li>Much more via <span style="font-style: italic;">&lt;your
-favourite
-
-
-
-                    module&gt;</span></li>
+                    favorite module&gt;</span></li>
               </ul>
             </ul>
           </td>
@@ -206,6 +203,7 @@ favourite
           <td style="vertical-align: top; text-align: left;">April 2012:
             Pyspread version 0.2.2 has been <a
               href="http://ftp-master.debian.org/new/pyspread_0.2.2-1.html">uploaded
+
               to Debian unstable</a> by Andreas Noteng. Many thanks to
             him for packaging. After clearing the NEW queue, it will be
             installable in Debian unstable using "apt-get install
@@ -239,7 +237,7 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
                 &lt;3.0 </li>
               <li><a href="http://numpy.scipy.org/">numpy</a> &gt;=1.1.0</li>
               <li><a href="http://www.wxpython.org/">wxPython</a>
-                &gt;=2.8.10.1 (unicode version required)</li>
+                &gt;=2.8.10.1 (Unicode version required)</li>
               <li><a href="http://pyme.sourceforge.net/">PyMe</a>
                 &gt;=0.8.1</li>
             </ul>
@@ -289,11 +287,12 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
-          27. April 2012 </span></font></p>
+          01. May 2012 </span></font></p>
   </body>
 </html>
